Fix (pdfwrite): Conversion of PaintType 0 fonts to text rendering mode 1 sometimes produced incorrect stroke width.

Details:
Bug #690116 "StrokeWidth of outline font too small"

pdfwrite converts fonts with a PaintType of 0 (outline fonts) to a normal
font, but sets the text rendering mode to 1. The calculation of the
required stroke width was insufficient in some cases.

EXPECTED DIFFERENCES:
None. For PDF conversion, cat_logo.ps is slightly different at low (72 dpi)
resolution after conversion to PDF and I have two files which show marked improvement
after conversion to PDF with this change.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9178 a1074d23-0009-0410-80fe-cf8c14f379e6