gs/base/gdevpdts.c
@@ -80,6 +80,7 @@ struct pdf_text_state_s {
     bool continue_line;
     gs_point line_start;
     gs_point out_pos;		/* output position */
+    double PaintType0Width;
 };
 static const pdf_text_state_t ts_default = {
     /* State as seen by client */
@@ -762,4 +763,54 @@ int pdf_modify_text_render_mode(pdf_text_state_t *pts, int render_mode)
 	    break;
     }
     return(0);
+}
+
+int pdf_set_PaintType0_params (gx_device_pdf *pdev, gs_imager_state *pis, float size, 
+			       double scaled_width, const pdf_text_state_values_t *ptsv)
+{
+    pdf_text_state_t *pts = pdev->text->text_state;
+    double saved_width = pis->line_params.half_width;
+    int code;
+
+    /* This routine is used to check if we have accumulated glyphs waiting for output
+     * if we do, and we are using a PaintType 0 font (stroke), which is the only way we
+     * can get here, then we check to see if the stroke width has changed. If so we want to
+     * flush the buffer, and set the new stroke width. This produces:
+     * <width> w
+     * (text) Tj
+     * <new width> w
+     * (new text) Tj
+     *
+     * instead of :
+     * <width> w
+     * <new width> w
+     * (text) Tj
+     * (new text) Tj
+     */
+    if (pts->buffer.count_chars > 0) {
+	if (pts->PaintType0Width != scaled_width) {
+	    pis->line_params.half_width = scaled_width / 2;
+	    code = pdf_set_text_state_values(pdev, ptsv);
+	    if (code < 0)
+		return code;
+	    if (pdev->text->text_state->in.render_mode == ptsv->render_mode){
+		code = pdf_prepare_stroke(pdev, pis);
+		if (code >= 0) {
+		    /*
+		     * See stream_to_text in gdevpdfu.c re the computation of
+		     * the scaling value.
+		     */
+		    double scale = 72.0 / pdev->HWResolution[1];
+
+		    code = gdev_vector_prepare_stroke((gx_device_vector *)pdev,
+					      pis, NULL, NULL, scale);
+		}
+	    }
+	    if (code < 0)
+		return code;
+	    pis->line_params.half_width = saved_width;
+	    pts->PaintType0Width = scaled_width;
+	}
+    }
+    return 0;
 }
